// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering a Second Workout 1`] = `
<div
  className="container-md"
>
  <h1>
    Edit a workout
  </h1>
  <div
    className="container-md"
  >
    <div
      className="accordion"
    >
      <div
        className="accordion-item"
      >
        <h2
          className="accordion-header"
        >
          <button
            aria-expanded={false}
            className="accordion-button collapsed"
            onClick={[Function]}
            type="button"
          >
            Exercise Information
          </button>
        </h2>
        <div
          aria-expanded={null}
          className="accordion-collapse collapse"
        >
          <div
            className="accordion-body"
          >
            <form
              className=""
              id="addWorkout"
              onSubmit={[Function]}
            >
              <div
                className="mb-3 input-group"
              >
                <span
                  className="input-group-text"
                >
                  Date
                </span>
                <input
                  aria-label="workoutDate"
                  className="form-control"
                  onChange={[Function]}
                  type="date"
                  value="2022-02-08"
                />
              </div>
              <div
                className="mb-3 input-group"
              >
                <span
                  className="input-group-text"
                >
                  Notes
                </span>
                <textarea
                  aria-label="workoutNotes"
                  className="form-control"
                  onChange={[Function]}
                  rows={3}
                  value="February"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      className="accordion"
    >
      <div
        className="accordion-item"
      >
        <h2
          className="accordion-header"
        >
          <button
            aria-expanded={false}
            className="accordion-button collapsed"
            onClick={[Function]}
            type="button"
          >
            Add/Edit Exercises
          </button>
        </h2>
        <div
          aria-expanded={null}
          className="accordion-collapse collapse"
        >
          <div
            className="accordion-body"
          >
            <div
              className="container-md"
            >
              <form
                className=""
                id="addExerciseForm"
                onSubmit={[Function]}
              >
                <div
                  className="mb-3 input-group"
                >
                  <span
                    className="input-group-text"
                  >
                    Name
                  </span>
                  <input
                    aria-label="name"
                    className="form-control"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="mb-3 input-group"
                >
                  <span
                    className="input-group-text"
                  >
                    Muscle Group
                  </span>
                  <input
                    aria-label="muscleGroup"
                    className="form-control"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="mb-3 input-group"
                >
                  <span
                    className="input-group-text"
                  >
                    Notes
                  </span>
                  <textarea
                    aria-label="exerciseNotes"
                    className="form-control"
                    onChange={[Function]}
                    rows={3}
                    value=""
                  />
                </div>
              </form>
              <div
                className="container"
              >
                <form
                  className=""
                  onSubmit={[Function]}
                >
                  <div
                    className="d-flex align-items-center mb-3 input-group"
                  >
                    <span
                      className="input-group-text"
                    >
                      Reps
                    </span>
                    <input
                      aria-label="reps"
                      className="form-control"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                    <span
                      className="input-group-text"
                    >
                      Weight
                    </span>
                    <input
                      aria-label="weight"
                      className="form-control"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                    <button
                      aria-label="setSubmit"
                      className="btn btn-outline-secondary"
                      disabled={false}
                      type="submit"
                    >
                      Add Set
                    </button>
                  </div>
                </form>
              </div>
              <button
                aria-label="exerciseSubmit"
                className="mt-4 btn btn-outline-secondary"
                disabled={false}
                form="addExerciseForm"
                type="submit"
              >
                Add Exercise
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="accordion"
    >
      <div
        className="accordion-item"
      >
        <h2
          className="accordion-header"
        >
          <button
            aria-expanded={false}
            className="accordion-button collapsed"
            onClick={[Function]}
            type="button"
          >
            Exercise List
          </button>
        </h2>
        <div
          aria-expanded={null}
          className="accordion-collapse collapse"
        >
          <div
            className="accordion-body"
          >
            <div
              className="container"
            >
              <div
                className="list-group list-group-flush"
                onKeyDown={[Function]}
                style={
                  Object {
                    "margin": "auto",
                    "width": "60%",
                  }
                }
              >
                <button
                  className="list-group-item list-group-item-action"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                  style={
                    Object {
                      "border": "0px",
                    }
                  }
                >
                  <div
                    className="card"
                    onClick={[Function]}
                  >
                    <div
                      className="card-body"
                    >
                      <div
                        className="card-title h5"
                      >
                        #
                        1
                         - 
                        Incline Press
                      </div>
                      <div
                        className="card-body"
                      >
                        <div
                          className="pt-3 container"
                          style={
                            Object {
                              "margin": "auto",
                              "textAlign": "center",
                              "width": "60%",
                            }
                          }
                        >
                          <div
                            style={
                              Object {
                                "textAlign": "left",
                              }
                            }
                          >
                            Set List
                          </div>
                          <table
                            className="table table-sm table-striped table-bordered table-hover"
                          >
                            <thead>
                              <tr>
                                <th>
                                  Reps
                                </th>
                                <th>
                                  Weight
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  10
                                </td>
                                <td>
                                  275
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  10
                                </td>
                                <td>
                                  300
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  3
                                </td>
                                <td>
                                  315
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
                <button
                  className="list-group-item list-group-item-action"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                  style={
                    Object {
                      "border": "0px",
                    }
                  }
                >
                  <div
                    className="card"
                    onClick={[Function]}
                  >
                    <div
                      className="card-body"
                    >
                      <div
                        className="card-title h5"
                      >
                        #
                        2
                         - 
                        Lunges
                      </div>
                      <div
                        className="card-body"
                      >
                        <div
                          className="pt-3 container"
                          style={
                            Object {
                              "margin": "auto",
                              "textAlign": "center",
                              "width": "60%",
                            }
                          }
                        >
                          <div
                            style={
                              Object {
                                "textAlign": "left",
                              }
                            }
                          >
                            Set List
                          </div>
                          <table
                            className="table table-sm table-striped table-bordered table-hover"
                          >
                            <thead>
                              <tr>
                                <th>
                                  Reps
                                </th>
                                <th>
                                  Weight
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  40
                                </td>
                                <td>
                                  100
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  40
                                </td>
                                <td>
                                  100
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  40
                                </td>
                                <td>
                                  100
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  40
                                </td>
                                <td>
                                  100
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="workoutSubmit"
      className="btn btn-outline-secondary"
      disabled={false}
      form="addWorkout"
      type="submit"
    >
      Submit Workout
    </button>
  </div>
</div>
`;

exports[`Rendering a Workout 1`] = `
<div
  className="container-md"
>
  <h1>
    Edit a workout
  </h1>
  <div
    className="container-md"
  >
    <div
      className="accordion"
    >
      <div
        className="accordion-item"
      >
        <h2
          className="accordion-header"
        >
          <button
            aria-expanded={false}
            className="accordion-button collapsed"
            onClick={[Function]}
            type="button"
          >
            Exercise Information
          </button>
        </h2>
        <div
          aria-expanded={null}
          className="accordion-collapse collapse"
        >
          <div
            className="accordion-body"
          >
            <form
              className=""
              id="addWorkout"
              onSubmit={[Function]}
            >
              <div
                className="mb-3 input-group"
              >
                <span
                  className="input-group-text"
                >
                  Date
                </span>
                <input
                  aria-label="workoutDate"
                  className="form-control"
                  onChange={[Function]}
                  type="date"
                  value="2023-03-08"
                />
              </div>
              <div
                className="mb-3 input-group"
              >
                <span
                  className="input-group-text"
                >
                  Notes
                </span>
                <textarea
                  aria-label="workoutNotes"
                  className="form-control"
                  onChange={[Function]}
                  rows={3}
                  value="Testing Notes for Testing"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      className="accordion"
    >
      <div
        className="accordion-item"
      >
        <h2
          className="accordion-header"
        >
          <button
            aria-expanded={false}
            className="accordion-button collapsed"
            onClick={[Function]}
            type="button"
          >
            Add/Edit Exercises
          </button>
        </h2>
        <div
          aria-expanded={null}
          className="accordion-collapse collapse"
        >
          <div
            className="accordion-body"
          >
            <div
              className="container-md"
            >
              <form
                className=""
                id="addExerciseForm"
                onSubmit={[Function]}
              >
                <div
                  className="mb-3 input-group"
                >
                  <span
                    className="input-group-text"
                  >
                    Name
                  </span>
                  <input
                    aria-label="name"
                    className="form-control"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="mb-3 input-group"
                >
                  <span
                    className="input-group-text"
                  >
                    Muscle Group
                  </span>
                  <input
                    aria-label="muscleGroup"
                    className="form-control"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="mb-3 input-group"
                >
                  <span
                    className="input-group-text"
                  >
                    Notes
                  </span>
                  <textarea
                    aria-label="exerciseNotes"
                    className="form-control"
                    onChange={[Function]}
                    rows={3}
                    value=""
                  />
                </div>
              </form>
              <div
                className="container"
              >
                <form
                  className=""
                  onSubmit={[Function]}
                >
                  <div
                    className="d-flex align-items-center mb-3 input-group"
                  >
                    <span
                      className="input-group-text"
                    >
                      Reps
                    </span>
                    <input
                      aria-label="reps"
                      className="form-control"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                    <span
                      className="input-group-text"
                    >
                      Weight
                    </span>
                    <input
                      aria-label="weight"
                      className="form-control"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                    <button
                      aria-label="setSubmit"
                      className="btn btn-outline-secondary"
                      disabled={false}
                      type="submit"
                    >
                      Add Set
                    </button>
                  </div>
                </form>
              </div>
              <button
                aria-label="exerciseSubmit"
                className="mt-4 btn btn-outline-secondary"
                disabled={false}
                form="addExerciseForm"
                type="submit"
              >
                Add Exercise
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="accordion"
    >
      <div
        className="accordion-item"
      >
        <h2
          className="accordion-header"
        >
          <button
            aria-expanded={false}
            className="accordion-button collapsed"
            onClick={[Function]}
            type="button"
          >
            Exercise List
          </button>
        </h2>
        <div
          aria-expanded={null}
          className="accordion-collapse collapse"
        >
          <div
            className="accordion-body"
          >
            <div
              className="container"
            >
              <div
                className="list-group list-group-flush"
                onKeyDown={[Function]}
                style={
                  Object {
                    "margin": "auto",
                    "width": "60%",
                  }
                }
              >
                <button
                  className="list-group-item list-group-item-action"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                  style={
                    Object {
                      "border": "0px",
                    }
                  }
                >
                  <div
                    className="card"
                    onClick={[Function]}
                  >
                    <div
                      className="card-body"
                    >
                      <div
                        className="card-title h5"
                      >
                        #
                        1
                         - 
                        Bench Press
                      </div>
                      <div
                        className="card-body"
                      >
                        <div
                          className="pt-3 container"
                          style={
                            Object {
                              "margin": "auto",
                              "textAlign": "center",
                              "width": "60%",
                            }
                          }
                        >
                          <div
                            style={
                              Object {
                                "textAlign": "left",
                              }
                            }
                          >
                            Set List
                          </div>
                          <table
                            className="table table-sm table-striped table-bordered table-hover"
                          >
                            <thead>
                              <tr>
                                <th>
                                  Reps
                                </th>
                                <th>
                                  Weight
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  20
                                </td>
                                <td>
                                  275
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  20
                                </td>
                                <td>
                                  300
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  3
                                </td>
                                <td>
                                  315
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
                <button
                  className="list-group-item list-group-item-action"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                  style={
                    Object {
                      "border": "0px",
                    }
                  }
                >
                  <div
                    className="card"
                    onClick={[Function]}
                  >
                    <div
                      className="card-body"
                    >
                      <div
                        className="card-title h5"
                      >
                        #
                        2
                         - 
                        Shrugs
                      </div>
                      <div
                        className="card-body"
                      >
                        <div
                          className="pt-3 container"
                          style={
                            Object {
                              "margin": "auto",
                              "textAlign": "center",
                              "width": "60%",
                            }
                          }
                        >
                          <div
                            style={
                              Object {
                                "textAlign": "left",
                              }
                            }
                          >
                            Set List
                          </div>
                          <table
                            className="table table-sm table-striped table-bordered table-hover"
                          >
                            <thead>
                              <tr>
                                <th>
                                  Reps
                                </th>
                                <th>
                                  Weight
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  40
                                </td>
                                <td>
                                  100
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  40
                                </td>
                                <td>
                                  100
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  40
                                </td>
                                <td>
                                  100
                                </td>
                              </tr>
                              <tr
                                onClick={[Function]}
                              >
                                <td>
                                  40
                                </td>
                                <td>
                                  100
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="workoutSubmit"
      className="btn btn-outline-secondary"
      disabled={false}
      form="addWorkout"
      type="submit"
    >
      Submit Workout
    </button>
  </div>
</div>
`;
